# coke-zero

./: .env.example  .gitignore  .vercelignore  BRANCH_README.md  CODEOWNERS  CODEX_TASKS.md  GOALS.md  LICENSE  NOTES.md  README.md  SUBMISSION.md  architecture.html  index.html  main.py  nia.json  package-lock.json  package.json  pyproject.toml  run  vercel.json  vite.config.ts
bench/: __init__.py  compare.py  generate.py  run.py  scoring.py  seeds.yaml
canopy/: __main__.py  _engine.py  api.py  cli.py
coke_zero/: __main__.py  _engine.py  api.py  cli.py  tensorlake_app.py
data/: expected_ui_events.json  kb_seed_entries.json  source_registry.json  tle_cache.json
docs/: backend_frontend_handoff.md  data_lane.md  data_sources.md  demo_scenarios.md  iran_conflict_demo_scenarios.md  scenario_gui_integration_plan.md  schema_contract.md  tensorlake_execution_proof.md
halo/: __main__.py  _engine.py  api.py  cli.py
scenarios/: army_drone_fdir.jsonl  army_multidomain_attack_chain.jsonl  army_relay_reconfig.jsonl  army_satellite_collection_risk.jsonl  beat1.jsonl  beat2.jsonl  beat4.jsonl  beat47.jsonl  iran_counter_c5isr_brigade.jsonl  iran_hormuz_convoy_resilience.jsonl  iran_proxy_uas_base_defense.jsonl
scripts/: demo_stress.py  demo_tools.py  fetch_n2yo_satellite.py  fetch_orbital_cache.py  replay.py  tensorlake_mission_watch.py  validate_scenarios.py  verify.py
src/: App.css  App.tsx  index.css  redesign.css
tests/: test_api_gateway.py  test_benchmark.py  test_bus.py  test_data_lane.py  test_decision_tools.py  test_demo_snapshot.py  test_fusion_correlator.py  (+17 more)
(+288 files in other folders)
