[project]
name = "canopy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.97.0",
    "fastapi>=0.115.0",
    "pydantic>=2.13.3",
    "pyyaml>=6.0.3",
    "skyfield>=1.54",
    "jsonschema>=4.26.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.32.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
